--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,17 @@ dependencies:
   intl: ^0.17.0
   lottie: ^1.3.0
   flutter_svg: ^1.1.1+1
+  # flutter_launcher_icons: ^0.9.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.9.2"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/lancher.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
