--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+    
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -37,6 +39,7 @@ dependencies:
   intl: ^0.17.0
   lottie: ^1.3.0
   flutter_svg: ^1.1.1+1
+  share_files_and_screenshot_widgets: ^1.0.6
   # flutter_launcher_icons: ^0.9.3
 
 dev_dependencies:
