--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   lottie: ^1.3.0
   flutter_svg: ^1.1.1+1
   share_files_and_screenshot_widgets: ^1.0.6
+  sqflite: ^2.0.3
   # flutter_launcher_icons: ^0.9.3
 
 dev_dependencies:
