--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_svg: ^1.1.1+1
   share_files_and_screenshot_widgets: ^1.0.6
   sqflite: ^2.0.3
+  easy_localization: ^3.0.1
   # flutter_launcher_icons: ^0.9.3
 
 dev_dependencies:
@@ -76,6 +77,7 @@ flutter:
     - assets/images/
     - assets/animations/
     - assets/svgs/
+    - assets/langs/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
