--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   share_files_and_screenshot_widgets: ^1.0.6
   sqflite: ^2.0.3
   easy_localization: ^3.0.1
+  shared_preferences: ^2.0.15
   # flutter_launcher_icons: ^0.9.3
 
 dev_dependencies:
