--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   sqflite: ^2.0.3
   easy_localization: ^3.0.1
   shared_preferences: ^2.0.15
+  introduction_screen: ^3.0.2
   # flutter_launcher_icons: ^0.9.3
 
 dev_dependencies:
