--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   easy_localization: ^3.0.1
   shared_preferences: ^2.0.15
   introduction_screen: ^3.0.2
+  responsive_sizer: ^3.1.0
   # flutter_launcher_icons: ^0.9.3
 
 dev_dependencies:
